<resources>
    <string name="app_name">Personas_material</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tituo_agregar">AGREGAR PERSONAS</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="mensaje_guardado_correcto">Mensaje Guardado Exitosamente</string>
    <string name="detalle_persona">DETALLE PERSONA</string>
    <string name="etiqueta_boton_eliminar">Eliminar</string>
    <string name="titulo_eliminar">Eliminar Persona</string>
    <string name="pregunta_mensaje_eliminar">¿Esta seguro que desea eliminar esta persona?</string>
    <string name="opcion_si">Si</string>
    <string name="opcion_no">No</string>
</resources>
